changes here and there

--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,10 @@ repository               : # "hemhemoh/mardiyyahoduwole.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile.jpeg"
   name             : "Mardiyyah Oduwole"
   pronouns         : #I example: "she/her"  
-  bio              : "Interested in Multilingul NLP and Machine Learning Efficiency"
+  bio              : "Interested in Multilingual NLP and ML Efficiency"
   location         : "London/UK"
   employer         :
   uri              : # URL
